line-liff-ready

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="theme-color" content="#ff0000" />
+  <!-- LINE LIFF Meta Tags -->
+  <meta name="liff:shareTargetPicker" content="true" />
   <title>วอลเปเปอร์มงคลเสริมดวง</title>
+  <!-- LINE LIFF SDK -->
+  <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/versions/2.23.0/sdk.js"></script>
 </head>
 
 <body>
